--- a/XtreamJson/src/main/resources/templates/fragments/liveCategoryItems.html
+++ b/XtreamJson/src/main/resources/templates/fragments/liveCategoryItems.html
@@ -3,6 +3,9 @@
         <p>No items found for this category.</p>
     </div>
     <ul th:if="${!#lists.isEmpty(items)}">
-        <li th:each="item : ${items}" th:text="${item.name}"></li>
+        <li th:each="item : ${items}">
+            <a th:href="@{'/stream.html'(url=${item.directSource})}"
+               th:text="${item.name}"></a>
+        </li>
     </ul>
 </div>
