--- a/XtreamJson/src/main/resources/templates/fragments/movieCategoryPage.html
+++ b/XtreamJson/src/main/resources/templates/fragments/movieCategoryPage.html
@@ -4,7 +4,7 @@
   Usage: Returned by /movieCategoryPage endpoint
 -->
 
-<div th:fragment="page" class="movie-category-container container-fluid" id="movie-category-container">
+<div th:fragment="movie-category-page" class="movie-category-container container-fluid" id="movie-category-container">
   <div class="row">
     <!-- Movie Grid -->
     <div class="col-11">
