--- a/XtreamJson/src/main/resources/templates/fragments/navbar.html
+++ b/XtreamJson/src/main/resources/templates/fragments/navbar.html
@@ -8,55 +8,6 @@
     <div class="collapse navbar-collapse" id="navbarActions">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="btn btn-outline-warning me-2 my-1" href="#"
-             hx-get="/admin/properties"
-             hx-target="#admin-properties-container"
-             hx-swap="innerHTML"
-             hx-on:click="
-                if (!document.getElementById('admin-properties-container')) { window.location.href = '/admin/properties'; return false; }
-                document.getElementById('admin-properties-container').innerHTML='';
-                document.getElementById('providers-container').innerHTML='';
-                document.getElementById('live-category-dropdown').innerHTML='';
-                document.getElementById('movie-category-dropdown').innerHTML='';
-                document.getElementById('series-category-dropdown').innerHTML='';
-                document.getElementById('series-list-container').innerHTML='';
-                document.getElementById('seasons-list').innerHTML='';
-                document.getElementById('movie-category-container').innerHTML='';
-                document.getElementById('movie-category-items').innerHTML='';
-                document.getElementById('live-category-items').innerHTML='';
-             ">
-            Properties
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="btn btn-outline-light me-2 my-1" href="#" 
-             hx-get="/providers/fragment" 
-             hx-target="#providers-container" 
-             hx-swap="innerHTML"
-             hx-on:click="
-                if (!document.getElementById('providers-container')) { window.location.href = '/?show=providers'; return false; }
-                document.getElementById('admin-properties-container').innerHTML='';
-                document.getElementById('live-category-dropdown').innerHTML='';
-                document.getElementById('movie-category-dropdown').innerHTML='';
-                document.getElementById('series-category-dropdown').innerHTML='';
-                document.getElementById('series-list-container').innerHTML='';
-                document.getElementById('seasons-list').innerHTML='';
-                document.getElementById('movie-category-container').innerHTML='';
-                document.getElementById('movie-category-items').innerHTML='';
-                document.getElementById('live-category-items').innerHTML='';
-             ">
-            Providers
-          </a>
-        </li>
-        <li class="nav-item">
-          <button class="btn btn-outline-light me-2 my-1" 
-                  type="button"
-                  data-bs-toggle="modal"
-                  data-bs-target="#resetDatabaseModal">
-            Reset Database
-          </button>
-        </li>
-        <li class="nav-item">
           <a class="btn btn-outline-light my-1" href="#" 
              hx-get="/liveCategoriesDropdown" 
              hx-target="#live-category-dropdown" 
@@ -117,6 +68,69 @@
             Show Series Categories
           </a>
         </li>
+        <!-- Settings Dropdown -->
+        <li class="nav-item dropdown ms-2">
+          <a class="nav-link dropdown-toggle d-flex align-items-center" href="#" id="settingsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="padding: 0.5rem 1rem;">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-gear" viewBox="0 0 16 16">
+              <path d="M8 4.754a3.246 3.246 0 1 0 0 6.492 3.246 3.246 0 0 0 0-6.492zM5.754 8a2.246 2.246 0 1 1 4.492 0 2.246 2.246 0 0 1-4.492 0z"/>
+              <path d="M9.796 1.343c-.527-1.79-3.065-1.79-3.592 0l-.094.319a.873.873 0 0 1-1.255.52l-.292-.16c-1.64-.892-3.433.902-2.54 2.541l.159.292a.873.873 0 0 1-.52 1.255l-.319.094c-1.79.527-1.79 3.065 0 3.592l.319.094a.873.873 0 0 1 .52 1.255l-.16.292c-.892 1.64.901 3.434 2.541 2.54l.292-.159a.873.873 0 0 1 1.255.52l.094.319c.527 1.79 3.065 1.79 3.592 0l.094-.319a.873.873 0 0 1 1.255-.52l.292.16c1.64.893 3.434-.902 2.54-2.541l-.159-.292a.873.873 0 0 1 .52-1.255l.319-.094c1.79-.527 1.79-3.065 0-3.592l-.319-.094a.873.873 0 0 1-.52-1.255l.16-.292c.893-1.64-.902-3.433-2.541-2.54l-.292.159a.873.873 0 0 1-1.255-.52l-.094-.319zm-2.633.283c.246-.835 1.428-.835 1.674 0l.094.319a1.873 1.873 0 0 0 2.693 1.115l.291-.16c.764-.415 1.6.42 1.184 1.185l-.159.292a1.873 1.873 0 0 0 1.116 2.692l.318.094c.835.246.835 1.428 0 1.674l-.319.094a1.873 1.873 0 0 0-1.115 2.693l.16.291c.415.764-.42 1.6-1.185 1.184l-.291-.159a1.873 1.873 0 0 0-2.693 1.116l-.094.318c-.246.835-1.428.835-1.674 0l-.094-.319a1.873 1.873 0 0 0-2.692-1.115l-.292.16c-.764.415-1.6-.42-1.184-1.185l.159-.291A1.873 1.873 0 0 0 1.945 8.93l-.319-.094c-.835-.246-.835-1.428 0-1.674l.319-.094A1.873 1.873 0 0 0 3.06 4.377l-.16-.292c-.415-.764.42-1.6 1.185-1.184l.292.159a1.873 1.873 0 0 0 2.692-1.116l.094-.318z"/>
+            </svg>
+          </a>
+          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="settingsDropdown">
+            <li>
+              <a class="dropdown-item" href="#" 
+                 hx-get="/providers/fragment" 
+                 hx-target="#providers-container" 
+                 hx-swap="innerHTML"
+                 hx-on:click="
+                    if (!document.getElementById('providers-container')) { window.location.href = '/?show=providers'; return false; }
+                    document.getElementById('admin-properties-container').innerHTML='';
+                    document.getElementById('live-category-dropdown').innerHTML='';
+                    document.getElementById('movie-category-dropdown').innerHTML='';
+                    document.getElementById('series-category-dropdown').innerHTML='';
+                    document.getElementById('series-list-container').innerHTML='';
+                    document.getElementById('seasons-list').innerHTML='';
+                    document.getElementById('movie-category-container').innerHTML='';
+                    document.getElementById('movie-category-items').innerHTML='';
+                    document.getElementById('live-category-items').innerHTML='';
+                 ">
+                Providers
+              </a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="#"
+                 hx-get="/admin/properties"
+                 hx-target="#admin-properties-container"
+                 hx-swap="innerHTML"
+                 hx-on:click="
+                    if (!document.getElementById('admin-properties-container')) { window.location.href = '/admin/properties'; return false; }
+                    document.getElementById('admin-properties-container').innerHTML='';
+                    document.getElementById('providers-container').innerHTML='';
+                    document.getElementById('live-category-dropdown').innerHTML='';
+                    document.getElementById('movie-category-dropdown').innerHTML='';
+                    document.getElementById('series-category-dropdown').innerHTML='';
+                    document.getElementById('series-list-container').innerHTML='';
+                    document.getElementById('seasons-list').innerHTML='';
+                    document.getElementById('movie-category-container').innerHTML='';
+                    document.getElementById('movie-category-items').innerHTML='';
+                    document.getElementById('live-category-items').innerHTML='';
+                 ">
+                Properties
+              </a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#resetDatabaseModal">Reset Database</a>
+            </li>
+            <li><hr class="dropdown-divider"></li>
+            <li>
+              <a class="dropdown-item" href="#" hx-get="/createStreams" hx-target="body" hx-swap="none">Create Streams</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="#" hx-get="/playlist.m3u8" hx-target="body" hx-swap="none">Create Playlist</a>
+            </li>
+          </ul>
+        </li>
+        <!-- End Settings Dropdown -->
       </ul>
     </div>
   </div>
