Further refactoring and UI improvments

--- a/XtreamJson/src/main/resources/templates/fragments/viewLog.html
+++ b/XtreamJson/src/main/resources/templates/fragments/viewLog.html
@@ -1,7 +1,7 @@
 <!-- fragments/viewLog.html -->
 <div th:fragment="logView">
   <h2>Application Log</h2>
-  <pre style="max-height: 500px; overflow-y: auto; background: #222; color: #eee; padding: 1em; border-radius: 5px;">
+  <pre style="max-height: 500px; overflow-y: auto; background: #222; color: #eee; padding: 1em; border-radius: 5px; text-align: left;">
     <span th:text="${logContent}"></span>
   </pre>
 </div>
