--- a/XtreamJson/src/main/resources/templates/fragments/navbar.html
+++ b/XtreamJson/src/main/resources/templates/fragments/navbar.html
@@ -119,7 +119,11 @@
               </a>
             </li>
             <li>
-              <a class="dropdown-item d-flex align-items-center" href="#" data-bs-toggle="modal" data-bs-target="#resetDatabaseModal">
+              <a class="dropdown-item d-flex align-items-center" href="#"
+                 hx-get="/resetDatabase"
+                 hx-target="#reset-status"
+                 hx-swap="innerHTML"
+                 onclick="document.getElementById('reset-status').innerHTML='Updating database, please wait...'; return false;">
                 <i class="bi bi-arrow-repeat me-2"></i> Reset Database
               </a>
             </li>
