Added search capability

--- a/XtreamJson/src/main/resources/templates/fragments/navbar.html
+++ b/XtreamJson/src/main/resources/templates/fragments/navbar.html
@@ -149,6 +149,14 @@
           </ul>
         </li>
         <!-- End Settings Dropdown -->
+        <li class="nav-item ms-2">
+          <button class="btn btn-outline-light my-1 px-3 rounded-pill transition" id="search-btn" type="button">
+            <i class="bi bi-search"></i> Search
+          </button>
+        </li>
+        <li class="nav-item ms-2" id="search-box-container" style="display:none;">
+          <input type="text" class="form-control" id="search-box" placeholder="Search movies or series... (min 2 chars)" autocomplete="off" style="width: 260px; margin-top: 6px;">
+        </li>
       </ul>
     </div>
   </div>
