--- a/XtreamJson/src/main/resources/templates/home.html
+++ b/XtreamJson/src/main/resources/templates/home.html
@@ -92,5 +92,6 @@
 </div>
 
 <!-- Modal removed: resetDatabase now invoked directly from the navbar via htmx and updates #reset-status -->
+<script src="/js/navbar.js"></script>
 </body>
 </html>
