--- a/XtreamJson/src/main/resources/templates/stream.html
+++ b/XtreamJson/src/main/resources/templates/stream.html
@@ -134,5 +134,6 @@
         '<br>Or download the .m3u file and open it with VLC.';
     }
   </script>
+  <script src="/js/navbar.js"></script>
 </body>
 </html>
